Update homepage dashboard

--- a/roles/install-homepage/templates/services.yaml.j2
+++ b/roles/install-homepage/templates/services.yaml.j2
@@ -82,7 +82,7 @@
           username: "{{ qnap_username }}"
           password: "{{ qnap_password }}"
     - Keycloak:
-        href: https://sso.ocplab.com
+        href: https://sso.ocplab.com/admin/
         ping: https://sso.ocplab.com
         icon: https://upload.wikimedia.org/wikipedia/commons/2/29/Keycloak_Logo.png
         description: Single Sign-On
