--- a/roles/install-homepage/templates/settings.yaml.j2
+++ b/roles/install-homepage/templates/settings.yaml.j2
@@ -1,5 +1,13 @@
 title: OpenShift Lab
 headerStyle: underlined
+background:
+  image: https://gexperts.com/img/homepage-bg.jpg
+  brightness: 70
+  opacity: 20
+
+cardBlur: sm
+
+color: slate
 
 layout:
   Home:
