Add weather widget

--- a/roles/install-homepage/templates/widgets.yaml.j2
+++ b/roles/install-homepage/templates/widgets.yaml.j2
@@ -6,3 +6,11 @@
 - search:
     provider: google
     target: _blank
+
+- openmeteo:
+    label: Langford
+    latitude: 48.4496
+    longitude: -123.5026
+    timezone: America/Los_Angeles
+    units: metric
+    cache: 5
