--- a/roles/install-homepage/templates/settings.yaml.j2
+++ b/roles/install-homepage/templates/settings.yaml.j2
@@ -11,6 +11,8 @@ color: slate
 
 favicon: https://gexperts.com/img/openshift.png
 
+statusStyle: "dot"
+
 layout:
   Home:
     headerStyle: underlined
