Hide error messages

--- a/roles/install-homepage/templates/settings.yaml.j2
+++ b/roles/install-homepage/templates/settings.yaml.j2
@@ -13,6 +13,8 @@ favicon: https://gexperts.com/img/openshift.png
 
 statusStyle: "dot"
 
+hideErrors: true
+
 layout:
   Home:
     headerStyle: underlined
