Fix issues with ddns service

--- a/roles/install-ddns-route53/templates/ddns-route53.yaml.j2
+++ b/roles/install-ddns-route53/templates/ddns-route53.yaml.j2
@@ -29,6 +29,9 @@ route53:
     - name: "ocplab.com"
       type: "A"
       ttl: 300
+    - name: "vpn.ocplab.com"
+      type: "A"
+      ttl: 300
     - name: "slack-message-handler-product-catalog-cicd.apps.home.ocplab.com"
       type: "A"
       ttl: 300
